test/SemanticAnalysis/LifetimeMethods/ThrowingMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception TestError();

class TestClass() {
	// CHECK: .loci:9:2: error: lifetime method '::TestClass::__move' isn't marked 'noexcept'
	// CHECK: .loci:9:21: error: function '::TestClass::__move' is declared as 'noexcept' but can throw
	TestClass __move() {
		throw TestError();
	}
}

// CHECK: 2 errors generated.
